[package]
name = "ImageDuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
clap = { version = "4.4.8", features = ["derive"] }
image = "0.24.7"
eframe = "0.24.1"
cc = "1.0.83"
time = "0.3.30"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
